--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-sortablejs": "^2.0.11",
     "react-swipe-to-delete-ios": "^1.0.8",
     "react-trend": "^1.2.5",
+    "vercel": "^20.1.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
