--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 # Created by Vercel CLI
-
+module.exports = {
+    env:{
+        MONGO_URI:"mongodb+srv://TinKEKer:SMzAwiYMxfweC8FZ@test.rwqyh.gcp.mongodb.net/test>?retryWrites=true&w=majority",
+        UserMail:"nextjscoolnotes@gmail.com",
+        UserPassword:"harthpacker@gmail.com"
+    }
+}
