--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "nprogress": "^0.2.0",
     "react": "16.13.1",
     "react-beforeunload": "^2.2.4",
+    "react-calendar-heatmap": "^1.8.1",
     "react-cookie": "^4.0.3",
     "react-dom": "16.13.1",
     "react-sortable-hoc": "^1.11.0",
     "react-sortablejs": "^2.0.11",
+    "react-sparklines": "^1.7.0",
     "react-swipe-to-delete-ios": "^1.0.8",
     "react-trend": "^1.2.5",
     "vercel": "^20.1.0",
