New Posts Loading Animation

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "chartify": "^3.6.0",
     "cookie": "^0.4.1",
     "cookie-cutter": "^0.2.0",
+    "d3": "^6.2.0",
     "formik": "^2.1.5",
     "formik-material-ui": "^3.0.0-alpha.0",
     "handlebars": "^4.7.6",
     "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.0",
     "mongoose": "^5.10.2",
     "mongoose-auto-increment": "^5.0.1",
     "mongoose-sequence": "^5.2.2",
@@ -41,7 +43,9 @@
     "react-sortablejs": "^2.0.11",
     "react-sparklines": "^1.7.0",
     "react-swipe-to-delete-ios": "^1.0.8",
+    "react-tooltip": "^4.2.10",
     "react-trend": "^1.2.5",
+    "reactjs-calendar-heatmap": "^0.1.0",
     "vercel": "^20.1.0",
     "yup": "^0.29.3"
   },
