--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "handlebars": "^4.7.6",
     "isomorphic-unfetch": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "moment": "^2.29.0",
     "mongoose": "^5.10.2",
     "mongoose-auto-increment": "^5.0.1",
