--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemailer": "^6.4.11",
     "notistack": "^1.0.0",
     "nprogress": "^0.2.0",
+    "rc-swipeout": "^2.0.11",
     "react": "16.13.1",
     "react-beforeunload": "^2.2.4",
     "react-calendar-heatmap": "^1.8.1",
@@ -43,6 +44,7 @@
     "react-sortable-hoc": "^1.11.0",
     "react-sortablejs": "^2.0.11",
     "react-sparklines": "^1.7.0",
+    "react-swipe-to-delete-component": "^0.5.4",
     "react-swipe-to-delete-ios": "^1.0.8",
     "react-tooltip": "^4.2.10",
     "react-trend": "^1.2.5",
